# CN_Language

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  compile_codegen_test.sh  compile_runtime_test.sh  compile_semantic_test.sh  docker-compose.yml  docker_run.ps1  lessons.md  test_application.sh  test_bytecode_simple.c  更新文档.md  更新日志.md
src/: CMakeLists.txt
src/Token/: CN_token.h  DESIGN.md  EXAMPLES.md  README.md
src/analysis/checker/: static_check.c
src/application/: CN_main.c  README.md
src/application/cli/: CN_cli.c  CN_cli_interface.h  CN_command_executor.c  CN_command_executor.h  CN_command_parser.c  CN_command_parser.h
src/application/debugger/: CN_debug.h  CN_debugger_interface.h  EXAMPLES.md  README.md
src/application/repl/: CN_repl_impl.c  CN_repl_interface.h  README.md
src/backend/cgen/: cgen.c  class_cgen.c  exception_cgen.c  module_cgen.c  template_cgen.c
src/cli/cnc/: main.c
src/cli/cncheck/: main.c
src/cli/cnfmt/: main.c
src/cli/cnlsp/: lsp_document_manager.c  lsp_handlers.c  lsp_jsonrpc.c  lsp_server.c  main.c
src/cli/cnperf/: main.c
src/cli/cnrepl/: main.c
src/core/: CN_compiler_impl.c  CN_compiler_interface.h  CN_compiler_simple.c  CN_type_array.c  CN_types.h  DESIGN.md  EXAMPLES.md  README.md
src/core/ast/: CN_ast.h  CN_ast_builder.c  CN_ast_builder.h  CN_ast_compat.c  CN_ast_interface.h  CN_ast_interface_impl.c  CN_ast_node.c  CN_ast_node.h  CN_ast_query.c  CN_ast_query.h  CN_ast_serializer.c  CN_ast_serializer.h  CN_ast_traversal.c  CN_ast_traversal.h  README.md
src/core/codegen/: CN_codegen_factory.c  CN_codegen_interface.h  CN_optimizer_interface.h  CN_target_codegen_interface.c  CN_target_codegen_interface.h  IMPLEMENTATION_SUMMARY.md  README.md
src/core/ir/: CN_ir_builder.c  CN_ir_builder.h  CN_ir_interface.c  CN_ir_interface.h  CN_ir_optimizer.h  README.md
src/core/lexer/: CN_keyword_query.c  CN_keyword_utils.c  CN_lexer_impl.c  CN_lexer_interface.c  CN_lexer_interface.h  CN_token.c  README.md
src/core/parser/: CN_parser_interface.c  CN_parser_interface.h  CN_syntax_error.c  CN_syntax_error.h  README.md
src/core/runtime/: CN_runtime_interface.c  CN_runtime_interface.h  README.md
src/core/semantic/: CN_semantic_interface.c  CN_semantic_interface.h  README.md
src/core/token/: CN_token.c  CN_token.h  CN_token_interface.h  CN_token_types.h  README.md
src/core/types/: CN_type_check.c  CN_type_convert.c  CN_type_pointer.c  CN_type_string.c  CN_type_struct.c  CN_type_utils.c  CN_types.c
src/debug/: CN_debug.c  CN_debug.h  DESIGN.md  EXAMPLES.md  README.md
src/format/: formatter.c
src/frontend/ast/: ast.c  class_node.c
src/frontend/lexer/: keywords.c  lexer.c  token.c
src/frontend/lsp_bridge/: lsp_bridge.c
src/frontend/module_loader/: module_loader.c
src/frontend/parser/: parser.c
src/frontend/preprocessor/: preprocessor.c
src/infrastructure/containers/: CN_array.c  CN_array.h
src/infrastructure/memory/: CN_memory.c  CN_memory.h  CN_memory.h.backup  CN_memory_allocator.c  CN_memory_interface.h  README.md
src/infrastructure/platform/: CN_hardware.h  CN_interrupt.h  CN_platform.h  CN_platform_default.c  CN_platform_interface.h  CN_platform_linux.c  CN_platform_macos.c  CN_platform_stub.c  CN_platform_windows.c  README.md
src/infrastructure/utils/: CN_string.h  CN_utils_interface.h  CN_utils_math_error.c  CN_utils_string.c  README.md
src/ir/core/: ir.c
src/ir/passes/: constant_folding.c  copy_propagation.c  cse.c  dead_code_elimination.c  inlining.c  loop_invariant.c  strength_reduction.c  tail_call_opt.c
src/keywords/: CN_keyword_table.c  EXAMPLES.md
src/runtime/: CMakeLists.txt
src/runtime/cli/: cli.c
src/runtime/collections/: collections.c  hashmap.c  list.c  vector.c
src/runtime/core/: exception.c  freestanding_builtins.c  interrupt.c  rtti.c  runtime.c  stdlib.c
src/runtime/io/: file_ext.c  io.c  kernel_io.c
src/runtime/math/: math.c
src/runtime/memory/: allocator.c  freestanding_allocator.c  (+1 more)
tests/cn/: CMakeLists.txt  test_enum_var_conflict.c  test_enum_var_conflict.cn  test_extern_func.c  test_extern_func.cn  test_func_return.c  test_func_return.cn  test_load_type.c  test_load_type.cn  test_load_type_final.c  test_load_type_gen.c  test_load_type_out.c  test_pointer_param_access.cn  使用结构体.cn  指针成员访问测试.c  指针成员访问测试.cn  指针成员访问测试_gen.c  指针成员访问测试_out.c  枚举成员访问测试.c  枚举成员访问测试.cn  枚举成员访问测试_gen.c  枚举成员访问测试_out.c  类型传播测试.c  类型传播测试.cn  结构体依赖测试.c  结构体依赖测试.cn  结构体定义.c  结构体定义.cn
tests/integration/: CMakeLists.txt  integration_array_test.c  integration_compile_full_test.c  integration_full_frontend_test.c  integration_module_comprehensive_test.c  integration_parse_failure_test.c  integration_parse_success_test.c  integration_repl_expr_test.c  integration_repl_session_test.c  integration_repl_statement_test.c  integration_semantic_error_test.c  integration_string_array_test.c  io_integration_test.c  module_import_integration_test.c  multiplatform_stage8_test.c  multiplatform_test.c  test_error_example.cn  test_repl_diagnostics.ps1  test_semantic_errors.cn
tests/perf/: CMakeLists.txt  multi_inheritance_perf.c
tests/unit/: CMakeLists.txt  abstract_class_cgen_test.c  allocator_test.c  arena_allocator_test.c  arena_stress_test.c  class_debug_test.c  class_inheritance_test.c  collections_test.c  constructor_destructor_cgen_test.c  debug_array_type.c  diag_test.c  else_if_test.c  formatter_test.c  freestanding_check_test.c  interface_cgen_test.c  io_test.c  ir_passes_test.c  lexer_error_test.c  lexer_function_examples_test.c  lexer_keyword_refined_test.c  lexer_performance_test.c  lexer_token_test.c  logical_operators_test.c  lsp_bridge_test.c  memory_leak_test.c  memory_profiler_test.c  method_style_length_test.c  module_loader_test.c  package_module_import_test.c  parser_array_assign_test.c  parser_array_literal_test.c  parser_array_param_test.c  parser_assign_test.c  parser_break_test.c  parser_c_array_enhancement_test.c  parser_c_style_array_test.c  parser_class_test.c  parser_comparison_test.c  parser_diagnostics_test.c  parser_enum_test.c  (+39 more)
(+2210 files in other folders)
